--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,16 @@
 dependencies {
     compile 'org.springframework:spring-web:5.1.4.RELEASE'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.0'
+    testCompile 'org.slf4j:slf4j-log4j12:1.7.25'
+    testCompile 'commons-codec:commons-codec:1.11'
+
+
+
+}
+
+repositories {
+    mavenLocal()
+    maven {
+        url = 'https://maven.aliyun.com/repository/public'
+    }
 }
