--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@
 rootProject.name = 'reactive-security'
 include(':common')
 include(':auth')
+include(':authmore')
 include(':cart')
 include(':gates')
 include(':message')
