authmore exclude spring security

--- a/authmore/build.gradle
+++ b/authmore/build.gradle
@@ -22,10 +22,13 @@ ext {
 }
 
 dependencies {
+    implementation project(':auth')
+    implementation project(':common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+    
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
