--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -10,10 +10,12 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "maven-publish"
 
-group = 'me.zbl.reactivesecurity'
+group = 'me.zbl.reactive-security'
 version = '0.0.1-SNAPSHOT'
 description = 'auth'
 sourceCompatibility = '1.8'
