--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -20,6 +20,10 @@ version = '0.0.1-SNAPSHOT'
 description = 'auth'
 sourceCompatibility = '1.8'
 
+jar {
+    enabled = true
+}
+
 repositories {
     mavenLocal()
     maven {
