--- a/authmore/settings.gradle
+++ b/authmore/settings.gradle
@@ -6,5 +6,5 @@ pluginManagement {
 rootProject.name = 'authmore'
 
 include ":auth", ":common"
-project(":auth").projectDir = new File("../auth")
-project(":common").projectDir = new File("../common")
+project(":auth").projectDir = file("../auth")
+project(":common").projectDir = file("../common")
