expose specific port number in dockerfile

--- a/auth/Dockerfile.test
+++ b/auth/Dockerfile.test
@@ -1,5 +1,6 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
+EXPOSE 8083
 ARG JAR_FILE=build/libs/auth-0.0.1-SNAPSHOT.jar
 ARG JAR_DEST=/app/app.jar
 WORKDIR /app
