--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,3 +28,19 @@ repositories {
         url = 'https://maven.aliyun.com/repository/public'
     }
 }
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'me.zbl.authmore'
+            artifactId = 'common'
+            version = '0.0.1-SNAPSHOT'
+
+            from components.java
+        }
+    }
+}
+
+jar {
+    enabled = true
+}
