--- a/sample/src/main/resources/application.yml
+++ b/sample/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 authmore:
-#  resource-id: SAMPLE
-  token-info-url: http://localhost:8086/oauth/check_token
-  client-id: cartapp
-  client-secret: 123456
+  resource:
+  #  resource-id: SAMPLE
+    token-info-url: http://localhost:8086/oauth/check_token
+    client-id: cartapp
+    client-secret: 123456
