--- a/resource-sample/src/main/resources/application.yml
+++ b/resource-sample/src/main/resources/application.yml
@@ -4,3 +4,6 @@ authmore:
     token-info-url: http://localhost:8086/oauth/check_token
     client-id: cartapp
     client-secret: 123456
+
+server:
+  port: 8011
