--- a/resource-sample/src/main/resources/application.yml
+++ b/resource-sample/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 authmore:
   resource:
-    #  resource-id: SAMPLE
+    resource-id: SAMPLE
     token-info-url: http://localhost:8086/oauth/check_token
     client-id: cartapp
     client-secret: 123456
