--- a/client-sample/src/main/resources/application.yml
+++ b/client-sample/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8012
+  port: 8090
 
 authmore:
   client:
-    client-id: cartapp
-    client-secret: 123456
+    client-id: 5cb7e7bcee173c60c379e04e
+    client-secret: afLTqlcRUr32UC3nWiUNIMsfOmVlzuzX
     token-issue-url: http://localhost:8086/oauth/token
-    request-token-on-startup: true
-    scope: PROFILE
+    redirect-uri: http://localhost:8090/signin
+    authorize-url: http://localhost:8086/authorize
