--- a/resource-sample/src/main/resources/application.yml
+++ b/resource-sample/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8011
+  port: 8091
 
 authmore:
   resource:
-    resource-id: SAMPLE
+    resource-id: MAILBOX
     token-info-url: http://localhost:8086/oauth/check_token
-    client-id: cartapp
-    client-secret: 123456
+    client-id: 5cb88433ee173c60c379e04f
+    client-secret: 6LJTlUAfSo4TZhgRdAh2BC1hfUGROEpT
