--- a/docker-compose.preview.yml
+++ b/docker-compose.preview.yml
@@ -34,7 +34,7 @@ services:
   authmore-ui:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/authmore-ui
     container_name: authmore-ui
-    restart: unless-stop
+    restart: unless-stopped
     networks:
       - authmore
     ports:
