--- a/auth/Dockerfile.test
+++ b/auth/Dockerfile.test
@@ -5,4 +5,4 @@ ARG JAR_FILE=build/libs/auth-0.0.1-SNAPSHOT.jar
 ARG JAR_DEST=/app/app.jar
 WORKDIR /app
 COPY ${JAR_FILE} ${JAR_DEST}
-ENTRYPOINT ["java","-Xmx32m", "-Xss256k", "-Dspring.profiles.active=test", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=test", "-jar", "app.jar", "-Xmx32m", "-Xss256k"]
