--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -30,7 +30,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "maven-publish"
 
-group = 'me.zbl.reactive-security'
+group = 'me.zbl.authmoreframework'
 version = '0.0.1-SNAPSHOT'
 description = 'auth'
 sourceCompatibility = '1.8'
