--- a/client-sample/build.gradle
+++ b/client-sample/build.gradle
@@ -34,3 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+build {
+    enabled = false
+}
