--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 - oraclejdk8
 
 script:
-- ./gradlew build --scan -s
+- ./gradlew build --scan -s -x test
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
