--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ jdk:
 services:
 - docker
 
+before_install:
+- $PRIVATE_REG_PASSWORD | docker login -u "$PRIVATE_REG_USERNAME" --password-stdin $PRIVATE_REG_HOST
+
 script:
 - ./gradlew build --scan -s -x test
 - ./build.preview.sh
