--- a/docker-compose.preview.yml
+++ b/docker-compose.preview.yml
@@ -3,6 +3,9 @@ version: "3"
 services:
   authmore:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/authmore
+    environment:
+      - JDK_JAVA_OPTIONS=-Dspring.profiles.active=test
+
     build:
       context: ./authmore
       dockerfile: Dockerfile.test
@@ -18,6 +21,8 @@ services:
 
   auth:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/auth
+    environment:
+      - JDK_JAVA_OPTIONS=-Dspring.profiles.active=test
     build:
       context: ./auth
       dockerfile: Dockerfile.test
