pass profile arguments to container

--- a/authmore/build.gradle
+++ b/authmore/build.gradle
@@ -57,6 +57,8 @@ docker {
     }
 }
 
+dockerCreateDockerfile.defaultCommand '-Dspring.profiles.active=test'
+
 publishing {
     publications {
         maven(MavenPublication) {
