--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -60,6 +60,8 @@ docker {
     }
 }
 
+dockerCreateDockerfile.defaultCommand '-Dspring.profiles.active=test'
+
 publishing {
     publications {
         maven(MavenPublication) {
