add JAVA_OPTS into compose file environment

--- a/docker-compose.preview.yml
+++ b/docker-compose.preview.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   authmore:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/authmore
+    environment:
+      - JAVA_OPTS="-Dspring.profiles.active=test"
     build:
       context: ./authmore
       dockerfile: Dockerfile.test
@@ -18,6 +20,8 @@ services:
 
   auth:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/auth
+    environment:
+      - JAVA_OPTS="-Dspring.profiles.active=test"
     build:
       context: ./auth
       dockerfile: Dockerfile.test
