override default command in compose file

--- a/docker-compose.preview.yml
+++ b/docker-compose.preview.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   authmore:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/authmore
-    command: ["-Dspring.profiles.active=test"]
+    command: ["--spring.profiles.active=test"]
     build:
       context: ./authmore
       dockerfile: Dockerfile.test
@@ -19,7 +19,7 @@ services:
 
   auth:
     image: registry-vpc.cn-beijing.aliyuncs.com/letec/auth
-    command: ["-Dspring.profiles.active=test"]
+    command: ["--spring.profiles.active=test"]
     build:
       context: ./auth
       dockerfile: Dockerfile.test
