--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ before_install:
 - echo $PRIVATE_REG_PASSWORD | docker login -u "$PRIVATE_REG_USERNAME" --password-stdin $PRIVATE_REG_HOST
 
 script:
-- ./gradlew build --scan -s -x test
-- ./gradlew dockerBuildImage
-- ./gradlew dockerPushImage
+- ./gradlew build --scan -s -x test dockerBuildImage dockerPushImage
 
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
