--- a/resource-autoconfigure/build.gradle
+++ b/resource-autoconfigure/build.gradle
@@ -19,8 +19,8 @@ plugins {
 }
 
 dependencies {
-    implementation project(":core")
-    implementation project(":common")
+    compile project(":core")
+    compile project(":common")
     implementation 'org.springframework:spring-webmvc:5.1.5.RELEASE'
     compileOnly 'org.springframework.boot:spring-boot-autoconfigure:2.1.2.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -31,7 +31,7 @@ publishing {
         maven(MavenPublication) {
             groupId = 'me.zbl.authmore'
             artifactId = 'resource-autoconfigure'
-            version = '0.0.1-SNAPSHOT'
+            version = '0.0.2-SNAPSHOT'
 
             from components.java
         }
