--- a/settings.gradle
+++ b/settings.gradle
@@ -25,5 +25,5 @@ include 'auth'
 include 'authmore'
 include 'resource-autoconfigure'
 include 'client-autoconfigure'
-//include 'resource-sample'
-//include 'client-sample'
+include 'resource-sample'
+include 'client-sample'
