rsa key pair and jwk endpoint

--- a/authmore/build.gradle
+++ b/authmore/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE'
     implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'com.nimbusds:nimbus-jose-jwt:6.0.2'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
