--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,19 @@ ext {
     registryRepository = "${registryHost}/letec"
 }
 
+allprojects {
+    group = 'com.github.jameszbl'
+    version = '0.0.1-SNAPSHOT'
+}
+
+description = 'Authmore - 轻量级 OAuth2 开放平台开发套件'
+
 subprojects {
 
     apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
     apply plugin: 'com.bmuschko.docker-spring-boot-application'
-
-    group = 'me.zbl.authmoreframework'
-    version = '0.0.1-SNAPSHOT'
-    description = '基于 OAuth2.0 的跨域认证授权开发套件'
-    sourceCompatibility = '1.8'
-
 
     repositories {
         mavenLocal()
@@ -66,12 +69,100 @@ subprojects {
             baseImage = 'openjdk:8-jdk-alpine'
         }
     }
+
+    task sourcesJar(type: Jar) {
+        archiveClassifier = 'sources'
+        from sourceSets.main.allJava
+    }
+
+    task javadocJar(type: Jar) {
+        archiveClassifier = 'javadoc'
+        from javadoc
+    }
+
+    javadoc {
+        afterEvaluate {
+            configure(options) {
+                encoding "UTF-8"
+                charSet 'UTF-8'
+                author true
+                version true
+                failOnError false
+                links "http://docs.oracle.com/javase/8/docs/api"
+            }
+        }
+    }
+
+    publishing {
+        repositories {
+            maven {
+                def userName = System.getProperty("SONATYPE_USERNAME")
+                def passWord = System.getProperty("SONATYPE_PASSWORD")
+                def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
+                credentials {
+                    username userName
+                    password passWord
+                }
+            }
+        }
+
+        publications {
+
+            mavenJava(MavenPublication) {
+                from components.java
+
+                artifact sourcesJar
+                artifact javadocJar
+
+                pom {
+                    name = 'authmore'
+                    packaging 'jar'
+                    description = 'A lightweight development kit for building OAuth2 open platform.'
+                    url = 'https://github.com/jameszbl/authmore'
+
+                    scm {
+                        connection = 'scm:git@github.com:Codearte/gradle-nexus-staging-plugin.git'
+                        developerConnection = 'scm:git@github.com:Codearte/gradle-nexus-staging-plugin.git'
+                        url = 'https://github.com/jameszbl/authmore'
+                    }
+
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id = 'JamesZBL'
+                            name = 'ZHENG BAO LE'
+                            email = 'zhengbaole@gmail.com'
+                        }
+                    }
+
+                    withXml {
+                        def root = asNode()
+                        root.dependencies.'*'.findAll {
+                            def d = it
+                            d.scope.text() == 'runtime' && project.configurations.findByName("implementation").allDependencies.find { dep ->
+                                dep.name == it.artifactId.text()
+                            }.each() {
+                                d.scope*.value = 'compile'
+                                d.appendNode('optional', true)
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 buildScan {
     termsOfServiceUrl = 'https://gradle.com/terms-of-service'
     termsOfServiceAgree = 'yes'
 }
-
-//project(':client-sample').build.enabled = false
-//project(':resource-sample').build.enabled = false
