--- a/authmore-resource-sample/build.gradle
+++ b/authmore-resource-sample/build.gradle
@@ -20,17 +20,13 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'me.zbl.authmore'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation 'me.zbl.authmore:resource-autoconfigure:0.0.2-SNAPSHOT'
+    implementation project(':authmore-resource-springboot-starter')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
