update build scripts

--- a/authmore-client-sample/build.gradle
+++ b/authmore-client-sample/build.gradle
@@ -31,6 +31,4 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-build {
-    enabled = false
-}
+uploadArchives.enabled = false
