--- a/authmore-resource-sample/build.gradle
+++ b/authmore-resource-sample/build.gradle
@@ -30,3 +30,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+uploadArchives.enabled = false
