--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ ext {
 
 allprojects {
     group = 'com.github.jameszbl'
-    version = '0.0.1-SNAPSHOT'
+    version = '1.0.2-SNAPSHOT'
 }
 
 description = 'Authmore - 轻量级 OAuth2 开放平台开发套件'
@@ -102,8 +102,8 @@ subprojects {
         repositories {
             mavenDeployer {
 
-                def username = System.getenv("SONATYPE_USERNAME")
-                def password = System.getenv("SONATYPE_PASSWORD")
+                def username = ossrhUser
+                def password = ossrhPassword
 
                 beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
