--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,7 @@ subprojects {
                 def username = ossrhUser
                 def password = ossrhPassword
 
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                beforeDeployment { deployment -> signing.signPom(deployment) }
 
                 repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                     authentication userName: username, password: password
