--- a/authmore-core/build.gradle
+++ b/authmore-core/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation project(':authmore-common')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.springframework.security:spring-security-core:5.1.4.RELEASE'
+    implementation 'com.nimbusds:nimbus-jose-jwt:6.0.2'
     compileOnly 'org.springframework:spring-web:5.1.5.RELEASE'
     compileOnly 'org.springframework.security.oauth:spring-security-oauth2:2.3.3.RELEASE'
     compileOnly 'org.apache.tomcat.embed:tomcat-embed-core:9.0.14'
