--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
 - mongodb
 - redis-server
 
-before_install:
-- echo $PRIVATE_REG_PASSWORD | docker login -u "$PRIVATE_REG_USERNAME" --password-stdin $PRIVATE_REG_HOST
+#before_install:
+#- echo $PRIVATE_REG_PASSWORD | docker login -u "$PRIVATE_REG_USERNAME" --password-stdin $PRIVATE_REG_HOST
 
 script:
 - ./gradlew build --scan -s
