implicit page component scan

--- a/authmore-client-sample/build.gradle
+++ b/authmore-client-sample/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     implementation project(':authmore-client-springboot-starter')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
